--- a/webapp/src/main/webapp/WEB-INF/persistor.properties
+++ b/webapp/src/main/webapp/WEB-INF/persistor.properties
@@ -89,7 +89,7 @@ isis.persistor.disableConcurrencyChecking=false
 #
 isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionDriverName=org.postgresql.Driver
 isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionURL=jdbc:postgresql://localhost:5432/informatica
-isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=nic
+isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionUserName=nico
 isis.persistor.datanucleus.impl.javax.jdo.option.ConnectionPassword=35493843
 
 #
