--- a/dom/pom.xml
+++ b/dom/pom.xml
@@ -113,6 +113,13 @@
             <artifactId>objenesis</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        
+        <dependency>
+			 <groupId>org.apache.pdfbox</groupId>
+  			<artifactId>pdfbox</artifactId>
+  		</dependency>
+     
     </dependencies>
 
     <profiles>
@@ -135,6 +142,7 @@
                                 <artifactId>todoapp-dom</artifactId>
                                 <version>1.8.0-SNAPSHOT</version>
                             </dependency>
+
                             <!--
                             ... workaround to avoid conflict with plexus-default
                                 (not sure why exclusions in the isis-maven-plugin aren't sufficient, though ...
