--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,12 @@
                 <scope>import</scope>
             </dependency>
 
+			<dependency>
+			 	<groupId>org.apache.pdfbox</groupId>
+  				<artifactId>pdfbox</artifactId>
+  				<version>1.8.10</version>
+			</dependency>
+
             <dependency>
                 <groupId>org.apache.isis.viewer</groupId>
                 <artifactId>isis-viewer-wicket</artifactId>
