Se agrega la posibilidad de borrar ordenes de servicios

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>informatica</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Simple App</name>
+    <name>Informatica</name>
 
     <packaging>pom</packaging>
 
