--- a/pom.xml
+++ b/pom.xml
@@ -324,6 +324,13 @@
   				<version>1.8.10</version>
 			</dependency>
 
+
+        	<dependency>
+    			<groupId>org.isisaddons.module.excel</groupId>
+    			<artifactId>isis-module-excel-dom</artifactId>
+    			<version>1.11.0</version>
+			</dependency>
+			
             <dependency>
                 <groupId>org.apache.isis.viewer</groupId>
                 <artifactId>isis-viewer-wicket</artifactId>
@@ -344,6 +351,7 @@
                 <artifactId>informatica-webapp</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+
 
 
         </dependencies>
